feat: Implement core game components and functionality
- Add GameCanvas component for rendering the game state.
- Create GameOverScreen to display results after player death.
- Implement KillFeed to show recent kills in the game.
- Develop Leaderboard to display top players and their scores.
- Add LiveLeaderboard for real-time player scores.
- Introduce MobileControls for touch-based navigation.
- Create StartScreen for player name input and game initiation.
- Update index.ts to export all new components.
- Configure game settings in game.ts for grid size, speed, and colors.
- Implement hooks for game logic and canvas rendering.
- Integrate Firebase for player authentication and leaderboard management.
- Define types for game entities including PlayerData, RemotePlayer, and GameState.
- Set up TypeScript configuration for strict type checking and module resolution.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,34 @@
 # Dependencies
 node_modules/
+.pnp
+.pnp.js
+
+# Build outputs
+.next/
+out/
+build/
+dist/
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Environment files
 .env
 .env.local
-.env.*.local
+.env*.local
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
 
 # IDE
-.vscode/
 .idea/
+.vscode/
 *.swp
 *.swo
 
@@ -16,13 +36,12 @@ node_modules/
 .DS_Store
 Thumbs.db
 
-# Logs
+# Testing
+coverage/
+.nyc_output/
+
+# Playwright
+.playwright-mcp/
+
+# Misc
 *.log
-npm-debug.log*
-
-# Vercel
-.vercel
-
-# Build outputs
-dist/
-build/
